v1.14.1 (1.16.5-forge): 全量基准迁入并跑绿；版本号统一回 1.14.1
把 1.20.1 基座的全量基准迁到本 fork：33 个测试类 / 230 条用例，
0 失败 0 错误 0 跳过，逐类计数与基座一致（实测 build/test-results/test/*.xml）。

- build.gradle: 去掉 `exclude 'com/ae2vm/addon/bench/**'`。原来必须整包排除
  bench，唯一原因是 bench/BenchKeyType 继承 AEKeyType -> ForgeRegistryEntry，
  类初始化就会拉起 GameData.<clinit>，在没有 MC 引导的单测 JVM 里必炸。
- 删掉 bench/BenchKeyType.java：bench 的键改用真实 AEItemKey 包 BenchItemStack，
  `(AEItemKey) key` 的强转照样成立，而 AEKeyType/GameData 彻底不在加载路径上。
- bench/ 与 com/moakiee/ 那批 Java 16 语法源码降级到 Java 8：新增 bench/J8.java
  提供 List.of / Map.of / List.copyOf / Map.copyOf 的等价物，做法与 1.12.2-nova 一致。
- 新增测试替身 appeng/core/Api.java：让 StorageChannels.items() 在没有 MC 引导时
  也能拿到一个真实 IItemList。不能用 AE2 自带的 appeng.util.item.ItemList ——
  它字节码里调 MC 的混淆名方法，而测试类路径上是 mapped 名，会 NoSuchMethodError。
- 新增 TestAeStacks / BenchItemStack / VmMissingAfterStockRefillTest /
  V8BridgeQuantityTest（§22 量纲契约 + 桥接层候选语义）。
- AEKey.java: 去掉指向已删 BenchKeyType 的那句 javadoc。

生产修复（V8PatternDetails，串槽）：`getSubstituteInputs(int)` 的下标基准是
**逐槽**的 `getSparseInputs()`，而桥接层之前直接把聚合表 `getInputs()` 的下标
喂了进去。没合并过的样板（例如工作台：4 个槽都是同一块木板）两者恰好同序，
所以看不出问题；一旦样板里混了不同物品、聚合表与逐槽表不同序，就会拿到别的槽
的候选集合 —— 网络里明明有货却报缺料。现在按 condensed 栈反查它在 sparse 里
的槽位（slotOf），查不到就退回 -1 并且不去问替代项。
V8BridgeQuantityTest 里 candidatesFollowTheSparseSlotNotTheCondensedPosition
就是钉这条的：故意让聚合表反序，断言木板槽拿到 6 个木板变体、羊毛槽拿到
4 个羊毛变体，互不串。

生产修复（CraftingVM）：删掉 v1.9.1 那段自称"已禁用"的 usedItems-vs-网络库存
对照诊断块。它是死代码，但块里夹着一行**没有注释掉**的
`appeng.api.networking.IGrid grid = (appeng.api.networking.IGrid) networkKey;`
—— 于是任何非 IGrid 的网络键都会 ClassCastException。
ensureRealStockSnapshot() 里那处同名强转有 `instanceof IGrid` 守卫，保留不动。

版本号：按决定不升版，七个 fork 统一 mod_version=1.14.1（与 1.17.1 及以上的
fork 保持一致）。